--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -338,6 +338,11 @@ void solve(){
 \newpage
 \section{数学}
 
+\subsection{错排公式}
+每个数字都不在自己位置上的排列数\par
+D(n) = (n-1) [D(n-2) + D(n-1)]\par
+特殊地，D(1) = 0, D(2) = 1.
+
 \subsection{欧拉筛}
 $O(n)$筛素数
 \begin{lstlisting}
@@ -956,8 +961,64 @@ void add(int x,int y,int w,int cost){
 \subsection{二分图最大匹配}
 用最大流求解，一边连源点流量1，一遍连汇点流量1，连上匹配边流量1，最大流即为最大匹配数
 
-时间复杂度趋近$O(nlogn)$
-\subsection{dijkstra}
+时间复杂度趋近$O(n\sqrt{n})$
+\subsection{最短路}
+\subsubsection{SPFA}
+\begin{lstlisting}
+//前向星
+struct Edge{
+    int to,w,nxt;
+}edges[MAXM];
+int head[MAXN];
+int n,m,s;
+int cnt;
+inline void add_edge(int u,int v,int w){
+    edges[cnt].to = v;
+    edges[cnt].w = w;
+    edges[cnt].nxt = head[u];
+    head[u] = cnt++;
+}
+//SPFA
+queue<int> q;
+ll dis[MAXN];//每个点当前最小距离
+bool vis[MAXN];//记录队列中是否有该点
+inline void init(){//初始化前向星和SPFA的dis数组
+    rep(i,1,n) dis[i]=LINF,head[i]=-1;
+    cnt = 0;
+}
+inline void solve(){
+    cin>>n>>m>>s;
+    init();//记得要初始化
+    int u,v,w;
+    rep(i,1,m){
+        cin>>u>>v>>w;
+        add_edge(u,v,w);
+    }
+    dis[s] = 0;
+    q.push(s);
+    int now;
+    while(!q.empty()){
+        now = q.front();
+        q.pop();
+        vis[now] = 0;//vis表示队中有无该点
+        //每次取出队首,并检查关联点是否可以进行松弛操作
+        for(int i=head[now];i!=-1;i=edges[i].nxt){
+            v = edges[i].to;
+            if(dis[v]>dis[now]+edges[i].w){//松弛操作
+                dis[v] = dis[now]+edges[i].w;
+                if(!vis[v]){//如果队列中没有点v,则将v入队
+                    vis[v] = 1;
+                    q.push(v);
+                }
+            }
+        }
+    }
+    rep(i,1,n) cout<<dis[i]<<' ';
+    //我这里还没有对到达不了的特殊情况进行处理
+    cout<<endl;
+}
+\end{lstlisting}
+\subsubsection{dijkstra}
 \begin{lstlisting}
 vector<pii> G[N];
 int dis[N];
@@ -1555,6 +1616,32 @@ void dfs(int now){
 			}
 		}
 	}
+}
+\end{lstlisting}
+考虑根是否连边
+\begin{lstlisting}
+void dfs(int pos,int pre){
+    siz[pos] = 1;//统计子树大小，子树最多有 siz[pos]/2 条选边
+    f[pos][0][0] = 1;
+    for(auto to:e[pos]){
+        if(to==pre) continue;
+        dfs(to,pos);
+        repb(i,siz[pos]/2,0){//父亲选i个
+            rep(j,0,siz[to]/2){//儿子选j个
+                if(j!=0){//不在当前儿子与根连
+                    f[pos][i+j][0] += f[pos][i][0]*(f[to][j][1]+f[to][j][0]%med)%med; 
+                    f[pos][i+j][0] %= med;
+                    f[pos][i+j][1] += f[pos][i][1]*(f[to][j][1]+f[to][j][0]%med)%med;
+                    f[pos][i+j][1] %= med;
+                    //不能让ij都等于0，不然f[pos][i+j][1]会丢失的（乘f[pos][j][0])变成0了
+                }
+                //考虑pos和to连边
+                f[pos][i+j+1][1] += (f[pos][i][0]*f[to][j][0])%med;
+                f[pos][i+j+1][1] %= med;
+            }
+        }
+        siz[pos] += siz[to];
+    }
 }
 \end{lstlisting}
 
@@ -2743,51 +2830,79 @@ struct SAM{
 \end{lstlisting}
 \section{其他}
 
-\subsection{FFT}
+\subsection{高精度}
 \begin{lstlisting}
-const double Pi = acos(-1.0);
-struct cplx{//手写负数complex用起来会更快
-    double x,y;
-    cplx(double x=0,double y=0):x(x),y(y){}
-    friend cplx operator + (cplx a,cplx b){return cplx(a.x+b.x,a.y+b.y);}
-    friend cplx operator - (cplx a,cplx b){return cplx(a.x-b.x,a.y-b.y);}
-    friend cplx operator * (cplx a,cplx b){return cplx(a.x*b.x-a.y*b.y,a.x*b.y+a.y*b.x);}
-}a[MAXN],b[MAXN];
-void FFT(int limit,cplx *a,int type){//limit记录项数
-    if(limit==1) return;//只有一个常数项结束递归(即只剩下0次的)
-    cplx a1[limit>>1],a2[limit>>1];//按照奇偶分组
-    for(int i=0;i<limit;i+=2)
-        a1[i>>1] = a[i],a2[i>>1] = a[i+1];
-    FFT(limit>>1,a1,type);
-    FFT(limit>>1,a2,type);
-    cplx Wn(cos(2*Pi/limit),type*sin(2*Pi/limit));//单位根
-    //这里type挺重要的,反变换的时候用-1,因为是-k
-    cplx w(1,0);//一会儿算单位根幂的时候用w存
-    cplx tmp;
-    for(int i=0;i<(limit>>1);i++,w=w*Wn){//w相当于公式中的w_n^k
-        tmp = w*a2[i];//蝴蝶操作
-        a[i]=a1[i]+tmp;//偶
-        a[i+(limit>>1)]=a1[i]-tmp;//O(1)算另外一部分
-    }
-}
-int main(){
-    int n=read(),m=read();
-    rep(i,0,n) a[i].x=read();
-    rep(i,0,m) b[i].x=read();
-    int limit = 1;
-    while(limit<=n+m) limit<<=1;//这里非常精髓
-    //把长度补到2的幂，这样就不用考虑%2余数的情况
-    //而且不必担心高次项的系数，因为默认为0
-    FFT(limit,a,1);
-    FFT(limit,b,1);
-    //1表示FFT，-1则是反变换   
-    rep(i,0,limit) a[i] = a[i]*b[i];//转换为点值后直接相乘
-    FFT(limit,a,-1);//现在变回去
-    rep(i,0,n+m) printf("%d ",(int)(a[i].x/limit+0.5));//还要除以n的
-    printf("\n");
-}
-//P3803 【模板】多项式乘法（FFT）
-//https://www.luogu.com.cn/problem/P3803
+struct INT{
+	static const int base=1e4;
+	vector<int>v;
+	INT(ll x=0){
+		while(x)v.push_back(x%base),x/=base;
+		if(v.size()==0)v.push_back(0);
+	}
+	inline int size()const{return v.size();}
+	inline void resize(int sz=1){v.clear();v.resize(sz,0);}
+	inline void topzero(){while(v.size()>1&&v.back()==0)v.pop_back();}
+	INT operator +(const INT &A)const{
+		INT T;
+		T.resize(max(size(),A.size())+1);
+		for(int i=0;i<T.size()-1;i++){
+			if(i<size())T.v[i]+=v[i];
+			if(i<A.size())T.v[i]+=A.v[i];
+			if(T.v[i]>=base)T.v[i+1]++,T.v[i]-=base;
+		}
+		T.topzero();
+		return T;
+	}
+	INT operator *(const INT &A)const{
+		INT T;
+		T.resize(size()+A.size()+5);
+		for(int i=0;i<size();i++)for(int j=0;j<A.size();j++){
+			T.v[i+j]+=v[i]*A.v[j];
+			if(T.v[i+j]>=2e9)T.v[i+j+1]+=T.v[i+j]/base,T.v[i+j]%=base;
+		}
+		for(int i=0;i<T.size();i++){
+			if(T.v[i]>=base)T.v[i+1]+=T.v[i]/base,T.v[i]%=base;
+		}
+		T.topzero();
+		return T;
+	}
+	INT operator /(const int x)const{
+		INT res;
+		res.resize(size());
+		ll tmp=0;
+		for(int i=size()-1;i>=0;i--){
+			tmp=tmp*base+v[i];
+			res.v[i]=tmp/x,tmp%=x;
+		}
+		res.topzero();
+		return res;
+	}
+	int operator %(const int mod)const{
+		int res=0;
+		for(int i=size()-1;i>=0;i--)res=(1ll*res*base+v[i])%mod;
+		return res;
+	}
+	friend INT fast(INT a,ll b){
+		INT res(1);
+		while(b){
+			if(b&1)res=res*a;
+			a=a*a;
+			b>>=1;
+		}
+		res.topzero();
+		return res;
+	}
+	void read(){
+		string str;
+		cin>>str;
+		resize();
+		for(int i=0;i<str.size();i++)*this=*this*INT(10)+INT(str[i]-'0');
+	}
+	void print(){
+		printf("%d",v[size()-1]);
+		for(int i=size()-2;i>=0;i--)printf("%04d",v[i]);
+	}
+};
 \end{lstlisting}
 
 \subsection{基础母函数求方案数}
@@ -3122,7 +3237,31 @@ int main(){
 }
 \end{lstlisting}
 
+\newpage
+
 \section{STL等小技巧}
+
+\subsection{位运算应用-claris}
+
+\subsubsection{枚举i的非空子集j}
+\begin{lstlisting}
+for(j=i;j;j=(j−1)&i);
+\end{lstlisting}
+
+\subsubsection{求1的个数}
+\begin{lstlisting}
+int __builtin_popcount(unsigned int x);
+\end{lstlisting}
+
+\subsubsection{前缀1个数}
+\begin{lstlisting}
+int __builtin_clz(unsigned int x);
+\end{lstlisting}
+
+\subsubsection{后缀1个数}
+\begin{lstlisting}
+int __builtin_ctz(unsigned int x);
+\end{lstlisting}
 
 \subsection{集合set}
 还可以通过lower\_bound和upper\_bound返回迭代器来找前驱,后继
