--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -15,6 +15,7 @@
 \usepackage{float} %设置图片浮动位置的宏包
 \usepackage{subfigure} %插入多图时用子图显示的宏包
 \usepackage{fancyhdr} % 自定义页眉页脚
+%\setsansfont{Consolas} % 设置英文字体
 \setsansfont{Consolas} % 设置英文字体
 \setmonofont[Mapping={}]{Consolas} % 英文引号之类的正常显示，相当于设置英文字体
 \geometry{left=1cm,right=1cm,top=2cm,bottom=0.5cm} % 页边距
