--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -2624,7 +2624,7 @@ class tzy_tree
     }
 }tree;
 \end{lstlisting}
-\subsection{splay}
+\subsubsection{splay}
 \begin{lstlisting}
 #include<bits/stdc++.h>
 using namespace std;
