二分图博弈

--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -336,6 +336,11 @@ void solve(){
 }
 \end{lstlisting}
 
+\subsection{二分图博弈}
+给定一张二分图，有一个起始点，AliceBob俩人轮流移动，不能经过重复的点，谁不能移动了谁输掉游戏\par
+问题转化为每一次可以从X部的点走到Y部的点:一开始的人在X,如果不能走就输了\par
+考虑起点S在不在一个完美匹配中即可。先去掉S点跑一次二分图匹配，之后加入X点，看匹配数是否增加，如若一样多，则说明S是可有可无的，存在不包含S的最大匹配。否则，说明S是不可或缺的。\par
+如果S不可或缺，那先手无论选择哪个点，它都一定是匹配点，则先手就输掉了。
  
 \section{数学}
 \subsection{高次期望DP}
