--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -235,7 +235,7 @@ int main(){
 	while(z--) solve();
 }
 \end{lstlisting}
- 
+\newpage
 \subsection{头文件(Dallby)}
 \begin{lstlisting}
 #include<bits/stdc++.h>
@@ -274,7 +274,7 @@ int main(){
     return 0;
 }
 \end{lstlisting}
- 
+ \newpage
 
 \section{博弈}
 \subsection{SG函数}
@@ -368,8 +368,8 @@ inline void solve(){
     printf("%.1lf\n",f[n]);
 }
 \end{lstlisting}
-
-\subsection{一些公式}
+\newpage
+\subsection{公式集合}
 \subsubsection{排列组合相关公式}
 化简可能有用\par
 $C_{n+1}^i = C_n^i + C_n^{i-1}$\par
@@ -474,6 +474,7 @@ void init(int p){
 	}
 }
 \end{lstlisting}
+\newpage
 \subsection{多项式}
 \subsubsection{FFT快速傅里叶变换}
 \begin{lstlisting}
@@ -511,7 +512,7 @@ void FFT(int n,int m,CP *F,CP *G){
     DFT(F,-1);
 }
 \end{lstlisting}
- 
+ \newpage
 \subsubsection{NTT快速数论变换}
 \begin{lstlisting}
 const int SIZE=(1<<21)+5;
@@ -665,7 +666,7 @@ int main(){
     while(cin>>n>>m) cout<<C(n,m)<<endl;
 }
 \end{lstlisting}
-
+\newpage
 \subsection{矩阵快速幂}
 \begin{lstlisting}
 struct Matrix{
@@ -829,7 +830,7 @@ inline ll get_yg(ll p){
 }
 \end{lstlisting}
 
-
+\newpage
 \section{图论}
 \subsection{树上倍增求LCA}
 \begin{lstlisting}
