--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -45,24 +45,53 @@
 \renewcommand{\footrulewidth}{0.4pt}
 
 % 代码格式设置
-\lstset{
-    language    = c++,
-    numbers     = left,
-    numberstyle = \tiny,
-    breaklines  = true,
-    captionpos  = b,
-    tabsize     = 4,
-    frame       = shadowbox,
-    columns     = fullflexible,
-    commentstyle = \color[RGB]{0,128,0},
-    keywordstyle = \color[RGB]{0,0,255},
-    basicstyle   = \small\ttfamily,
-    stringstyle  = \color[RGB]{148,0,209}\ttfamily,
-    rulesepcolor = \color{red!20!green!20!blue!20},
-    showstringspaces = false,
-}
+% \lstset{
+%     language    = c++,
+%     numbers     = left,
+%     numberstyle = \tiny,
+%     breaklines  = true,
+%     captionpos  = b,
+%     tabsize     = 4,
+%     frame       = shadowbox,
+%     columns     = fullflexible,
+%     commentstyle = \color[RGB]{0,128,0},
+%     keywordstyle = \color[RGB]{0,0,255},
+%     basicstyle   = \small\ttfamily,
+%     stringstyle  = \color[RGB]{148,0,209}\ttfamily,
+%     rulesepcolor = \color{red!20!green!20!blue!20},
+%     morecomment=[l][\color{magenta}]{\#}  
+%     showstringspaces = false,
+% }
 %==============================页眉、页脚、代码格式设置==============================%
+\lstdefinestyle{customc}{
+    numbers     = left,
+    columns     = fullflexible,
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  frame       = shadowbox,
+  rulesepcolor = \color{red!20!green!20!blue!20},
+  morecomment=[l][\color{magenta}]{\#}  
+  xleftmargin=\parindent,
+  language=C++,
+  showstringspaces=false,
+  basicstyle=\small\ttfamily,
+	keywordstyle = \color[RGB]{255,0,0},
+%  keywordstyle=\bfseries\color{green!40!black},
+  commentstyle=\itshape\color{green!40!black},
+  identifierstyle=\color{blue},
+  stringstyle=\color{orange},
+}
 
+\lstdefinestyle{customasm}{
+  belowcaptionskip=1\baselineskip,
+  frame=L,
+  xleftmargin=\parindent,
+  language=[x86masm]Assembler,
+  basicstyle=\small\ttfamily,
+  commentstyle=\itshape\color{purple!40!black},
+}
+
+\lstset{escapechar=@,style=customc}
 %==============================标题和目录==============================%
 \title{\CJKfamily{hei} \bfseries 泡泡猿ACM模板}
 \author{Rand0w \& REXWIND \& Dallby}
