--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -34,7 +34,7 @@
 % \rhead[\nouppercase{\rightmark}]{\thepage}
  \lhead{CUMTB}
 %\lhead[\thepage]{\leftmark} 
-\lhead{\CJKfamily{hei} 泡泡猿专用模板}
+\lhead{\CJKfamily{hei} OoO泡泡猿专用模板}
 \rhead{第 \thepage 页}
 % \rhead{Page \thepage}
 \chead[\thepage]{\leftmark} 
